feat - pagina de Iconos

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>LoboDev</title>
-        <base href="/LoboDev-App-Demo/">
+        <base href="/">
         <meta name="viewport" content="width=device-width, initial-scale=1.o">
         <link rel="preconnect" href="https://primefaces.org">
         <link rel="icon" type="image/x-icon" href="assets/images/lobodev_logo.png">
@@ -12,5 +12,5 @@
 
     <body>
         <app-root></app-root>
-    <link rel="modulepreload" href="chunk-X4MRYTKG.js"><link rel="modulepreload" href="chunk-JETJFF23.js"><link rel="modulepreload" href="chunk-YEP54JEY.js"><link rel="modulepreload" href="chunk-ZGPUVTKF.js"><link rel="modulepreload" href="chunk-HDLL46HA.js"><link rel="modulepreload" href="chunk-JLMXQQJQ.js"><link rel="modulepreload" href="chunk-UPRAEGDK.js"><script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-O6JVARXU.js" type="module"></script></body>
+    <link rel="modulepreload" href="chunk-PMALYHNP.js"><link rel="modulepreload" href="chunk-JX44DMYJ.js"><link rel="modulepreload" href="chunk-FPARC5RJ.js"><link rel="modulepreload" href="chunk-N7MOYQ3R.js"><link rel="modulepreload" href="chunk-HDLL46HA.js"><link rel="modulepreload" href="chunk-ZT5DLQVR.js"><link rel="modulepreload" href="chunk-UPRAEGDK.js"><script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-CFNJHKQC.js" type="module"></script></body>
 </html>
