cambio nombre  base href

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>LoboDev</title>
-        <base href="/LoboDev-App-Demo/">
+        <base href="/LoboDev-Angular-App-Demo/">
         <meta name="viewport" content="width=device-width, initial-scale=1.o">
         <link rel="preconnect" href="https://primefaces.org">
         <link rel="icon" type="image/x-icon" href="assets/images/lobodev_logo.png">
